# DMFF

./: .gitignore  Makefile  README.md  mkdocs.yml  requirements.txt  setup.py  test.xml
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature-request.yml  generic-issue.yml
.github/workflows/: mirror_gitee.yml  test_openmm_dmff_plugin.yml  ut.yml
backend/: save_dmff2tf.py
backend/openmm_dmff_plugin/: .gitignore  CMakeLists.txt  README.md
backend/openmm_dmff_plugin/openmmapi/include/: DMFFForce.h  DMFFKernels.h
backend/openmm_dmff_plugin/openmmapi/include/internal/: DMFFForceImpl.h  windowsExportDMFF.h
backend/openmm_dmff_plugin/openmmapi/src/: DMFFForce.cpp  DMFFForceImpl.cpp
backend/openmm_dmff_plugin/python/: CMakeLists.txt  OpenMMDMFFPlugin.i  setup.py
backend/openmm_dmff_plugin/python/OpenMMDMFFPlugin/: __init__.py  tools.py
backend/openmm_dmff_plugin/python/OpenMMDMFFPlugin/data/: tf2.9.1_c.tar
backend/openmm_dmff_plugin/python/OpenMMDMFFPlugin/data/admp_water_dimer_aux/: fingerprint.pb
backend/openmm_dmff_plugin/python/OpenMMDMFFPlugin/data/admp_water_dimer_aux/variables/: variables.data-00000-of-00001  variables.index
backend/openmm_dmff_plugin/python/OpenMMDMFFPlugin/data/lj_fluid_gpu/: fingerprint.pb  saved_model.pb
backend/openmm_dmff_plugin/python/OpenMMDMFFPlugin/tests/: test_dmff_plugin_nve.py
backend/openmm_dmff_plugin/python/tests/: test_dmff_plugin_nve.py
backend/openmm_dmff_plugin/serialization/include/: DMFFForceProxy.h
backend/openmm_dmff_plugin/serialization/src/: DMFFForceProxy.cpp  DMFFSerializationProxyRegistration.cpp
backend/openmm_dmff_plugin/serialization/tests/: CMakeLists.txt  TestSerializeDMFFForce.cpp
backend/openmm_dmff_plugin/tests/: cppflow_empty_constructor.patch
dmff/: __init__.py  api.py  difftraj.py  fftree.py  hamiltonian.py  mbar.py  optimize.py  settings.py  topology.py  torch_tools.py  utils.py  vstools.py
dmff/admp/: __init__.py  disp_pme.py  intra.py  mbpol_intra.py  multipole.py  pairwise.py  parser.py  parser_bk.py  pme.py  qeq.bck.py  qeq.py  qeq_br.py  qeq_hession.py  qeq_rf.py  recip.py  settings.py  spatial.py
dmff/api/: __init__.py  bettertopology.py  gcn.py  graph.py  hamiltonian.py  paramset.py  topology.py  vsite.py  vstools.py  xmlio.py
dmff/classical/: __init__.py  fep.py  inter.py  intra.py  vsite.py
dmff/common/: constants.py  covalent_map.py  nblist.py
dmff/dpnblist/: CMakeLists.txt  LICENSE  README.md  setup.py
dmff/dpnblist/examples/: nblist_test.py
dmff/dpnblist/src/: box.cpp  box.h  nbList.cpp  nbList.h  nbList_CPU.cpp  nbList_CPU.h  nbSchAlg.cpp  nbSchAlg.h  pywrap.cpp  pywrap_CPU.cpp
dmff/dpnblist/src/SchAlg/: cellSchAlgCPU.cpp  cellSchAlgCPU.h  cellSchAlgGPU.cu  cellSchAlgGPU.cuh  hashSchAlgCPU.cpp  hashSchAlgCPU.h  hashSchAlgGPU.cu  hashSchAlgGPU.cuh  octreeSchAlgCPU.cpp  octreeSchAlgCPU.h  octreeSchAlgGPU.cu  octreeSchAlgGPU.cuh
dmff/dpnblist/tests/: CMakeLists.txt  read_lmp.cpp  read_lmp.h  test_box.cpp  test_cellSchAlgCPU.cpp  test_cellSchAlgGPU.cpp  test_hashSchAlgCPU.cpp  test_hashSchAlgGPU.cpp  test_octreeSchAlgCPU.cpp  test_octreeSchAlgGPU.cpp
dmff/dpnblist/tests/data/: dpnblist_test  heterogeneous.lmp  sort_output_heterogeneous.txt
dmff/eann/: eann.py
dmff/generators/: QeqGenerator.py  __init__.py  admp.py  classical.py  ml.py  qeq.py
dmff/operators/: __init__.py  am1charge.py  base.py  gafftype.py  parmed.py  smartstype.py  smartsvsite.py  templatetype.py  templatevsite.py
dmff/sgnn/: gnn.py  graph.py
dmff/template/: ffxml.py
docs/: about.md  gen_ref_pages.py  index.md  license.md
docs/admp/: README.md  frontend.md  readme.md  theory.md
docs/assets/: DMFF_arch.md
docs/dev_guide/: arch.md  convention.md  generator.ipynb  introduction.md  profile.md  readme.md  write_docs.md
docs/modules/: admp.md
docs/user_guide/: 1.introduction.md  2.installation.md  3.usage.md  4.1classical.md  4.2ADMPPmeForce.md  4.3ADMPQeqForce.md  4.4MLForce.md  4.5Optimization.md  4.6MBAR.md  4.7OpenMMplugin.md  4.8DiffTraj.md  4.modules.md  DMFF_example.ipynb  installation.md  introduction.md  multipole_pme.md  readme.md  test.ipynb  theory.md  tutorial.md  usage.md  xml_spec.md
examples/: compare.py
examples/DMC/: DMC_Experi.txt  DMC_OPLS.txt  init.dcd  lj.xml  prm.xml  prm1.xml  res.xml  test.py
examples/classical/: demo.ipynb  gaff-2.11.xml  lig-prm.xml  lig-top.xml  test_xml.py
examples/eann/: EANN.pth  EANN_PES_DOUBLE.pt  eann.py  eann_model.pickle  params_trans.py  peg.xml  residues.xml  run.py  run_ref.py
examples/fluctuated_leading_term_waterff/: .forcefield.xml.swp  demo.ipynb  fluctuated_water_ff.ipynb  forcefield.xml  ref_out  run.py  tmp
examples/lennard_jones_opt/: Lig.top  ligand.mol  opt.ipynb
examples/lennard_jones_xml/: param.xml  reference_openmm.py  single_point_topo_built_by_hand.py  single_point_topo_from_xml.py
examples/mbar/: ben-prm.xml  ben-top.xml  benz.txt  demo.ipynb
examples/md_ipi/: .tmp.xml  client_EANN.py  client_dmff.py  driver.py  forcefield.xml  input.xml  intra.py  model6.py  run_EANN.sh  run_client_dmff.sh  run_server.sh
examples/msd_opt/: fit-msd.ipynb  init_state.pkl  line_ref  qspc-fw.xml
examples/openmm_api/: forcefield.xml  ref_out  residues.xml  run.py
examples/peg_slater_isa/: benchmark.xml  calc_energy_comps.py  check.py  check_calc.py  data.pickle  data_lr.pickle  data_sr.pickle  fit.py  fit.sh  forcefield_nonpol.xml  log_fit.0  params.0.pickle  params.1.pickle  params.pickle  ref_out  remove_lr.py  res_dhf.xvg  res_disp.xvg  res_es.xvg  res_ex.xvg  res_pol.xvg  res_tot.xvg  residues.xml  run_amoeba.py  tot_slater.xml
examples/sgnn/: gnn.py  model.pickle  model1.pickle  model1.pth  mse_testing.xvg  peg.xml  pth2pickle.py  ref_out  residues.xml  run.py  set_test_lowT.pickle  test.py  test_PF6.py  test_data.xvg  train.py
examples/smirks/: C3H7NO.mol  C3H7NO.xml  clpy_vsite.mol  clpy_vsite.xml  demo.ipynb
examples/torch_kernel/: params.xml  residues.xml  (+1 more)
profile/: profile_time.py
tests/: calcOmm.py  test_api.py  test_classical.py  test_energy.py  test_sptial.py  test_utils.py
(+188 files in other folders)
